# mcp

./: .gitignore
portfolio/: .env  README.md  main.py  pyproject.toml
portfolio/result/: LG씨엔에스(064400)_20250408.txt  삼성전자(005930)_20250408.txt
portfolio/src/: download_corp_codes.py  financial_analysis.py  stock_analysis_with_ai.py  stock_integrated_analysis.py  stock_technical_analysis.py
test_client/: main.py  pyproject.toml
클로드_날씨_검색/: README.md  clude_desktop_config_예시.json  날씨_검색_claude_desktop_log.txt
