[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Hayden Park <jkhpremium@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
pandas = "^2.2.3"
textblob = "^0.17.1"
scikit-learn = "^1.6.1"
requests = "^2.32.3"
lxml = "^5.1.0"
yfinance = "^0.2.55"
mplcursors = "^0.6"
python-dotenv = "^1.1.0"
openai = "^1.70.0"
mplfinance = "^0.12.10b0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
portfolio = "main:main"
financial-analysis = "src.financial_analysis:main"
download-corp-codes = "src.download_corp_codes:main"
